# RIEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: assets.h  audio.h  basics.h  ecs.h  events.h  ich.h  ichigo.h  input.h  main.h  mem.h  vec.h  vecCpp.h
include/gfx/: anim.h  draw.h  drawvm.h  opengl.h  texture.h  ttf.h
include/physics/: 3d.h  collision.h
shaders/glsl/: anim.vert  distort.frag  post3d.frag  skybox.frag  skybox.vert  std.vert  std2d.frag  std3d.frag  std3d_clip.frag
shaders/hlsl/: pixel.hlsl  vertex.hlsl
src/: CMakeLists.txt  assets.c  audio.c  basics.c  ecs.c  events.c  input.c  main.c  mem.c  stb_image.h  system_assets.h  system_events.h  system_init.h
src/gfx/: CMakeLists.txt  anim.c  anim.cpp  draw.cpp  drawvm.c  dx11.cpp  frustum.cpp  gfx.h  opengl.cpp  texture.c  ttf.c
src/ichigo/: CMakeLists.txt  arg.c  ich.h  ichigo.c  interpret.c  vm.c
src/physics/: CMakeLists.txt  body.cpp  character.cpp  collision.c  jolt.cmake  jolt.cpp  jolt.h  physics.c  raycast.cpp
tools/: assetar.py  meshCreator.c  texCreator.py
tools/ichigo/: ichigo.c  ichigo.h  instr.c  instr.h  lex.c  parse.c  semval.c  test.c
